[ADD]
add admin endpoints
