# docs/swagger.yaml
@@ -19,7 +19,7 @@ definitions:
       orders:
         description: '@Description Orders associated with this item'
         items:
-          $ref: '#/definitions/github_com_ICOMP-UNC_newworld-agustinhernando2_internal_models.Order'
+          $ref: '#/definitions/github_com_ICOMP-UNC_newworld-agustinhernando2_internal_models.OrderItem'
         type: array
       price:
         description: '@Description Item Price'
@@ -44,15 +44,35 @@ definitions:
       items:
         description: '@Description Items associated with this order'
         items:
-          $ref: '#/definitions/github_com_ICOMP-UNC_newworld-agustinhernando2_internal_models.Item'
+          $ref: '#/definitions/github_com_ICOMP-UNC_newworld-agustinhernando2_internal_models.OrderItem'
         type: array
       status:
         description: '@Description Order Status'
         type: string
+      total:
+        description: '@Description Item Price'
+        type: number
       updatedAt:
         type: string
       userId:
         description: '@Description User ID'
+        type: integer
+    type: object
+  github_com_ICOMP-UNC_newworld-agustinhernando2_internal_models.OrderItem:
+    properties:
+      createdAt:
+        type: string
+      deletedAt:
+        $ref: '#/definitions/gorm.DeletedAt'
+      itemID:
+        type: integer
+      orderID:
+        type: integer
+      price:
+        description: '@Description Item Price'
+        type: number
+      quantity:
+        description: '@Description Item Quantity in Order'
         type: integer
     type: object
   github_com_ICOMP-UNC_newworld-agustinhernando2_internal_models.User:
@@ -94,6 +114,88 @@ info:
   title: Order Api
   version: "1.0"
 paths:
+  /admin/dashboard:
+    get:
+      consumes:
+      - application/json
+      description: Retrieve the dashboard information about orders and offers. The
+        user must be authenticated as an admin.
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Dashboard information
+          schema:
+            $ref: '#/definitions/fiber.Map'
+        "500":
+          description: Failed to get dashboard
+          schema:
+            $ref: '#/definitions/fiber.Map'
+      security:
+      - ApiKeyAuth: []
+      summary: Retrieve the dashboard information
+      tags:
+      - Admin
+  /admin/orders/{id}:
+    patch:
+      consumes:
+      - application/json
+      description: Update the status of an order. The new status must be provided
+        in the request body. The user must be authenticated as an admin.
+      parameters:
+      - description: Order ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      - description: New status
+        in: body
+        name: status
+        required: true
+        schema:
+          type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Order status updated successfully
+          schema:
+            type: string
+        "400":
+          description: Cannot parse input data
+          schema:
+            type: string
+        "500":
+          description: Failed to update order status
+          schema:
+            type: string
+      security:
+      - ApiKeyAuth: []
+      summary: Update the status of an order
+      tags:
+      - Admin
+  /admin/updatesupplies:
+    post:
+      consumes:
+      - application/json
+      description: Update the available items in the Cpp Server Storage. The user
+        must be authenticated as an admin.
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Items updated successfully
+          schema:
+            type: string
+        "500":
+          description: Failed to update
+          schema:
+            type: string
+      security:
+      - ApiKeyAuth: []
+      summary: Update the available items
+      tags:
+      - Admin
   /auth/login:
     post:
       consumes:
@@ -149,6 +251,36 @@ paths:
       security:
       - ApiKeyAuth: []
       summary: Retrieve a list of available offers
+      tags:
+      - Auth
+  /auth/orders:
+    post:
+      consumes:
+      - application/json
+      description: Buy a list of orders from an authenticated user.
+      parameters:
+      - description: List of orders to buy
+        in: body
+        name: request
+        required: true
+        schema:
+          items:
+            $ref: '#/definitions/github_com_ICOMP-UNC_newworld-agustinhernando2_internal_models.OrderItem'
+          type: array
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Orders checked out successfully
+          schema:
+            $ref: '#/definitions/github_com_ICOMP-UNC_newworld-agustinhernando2_internal_models.Order'
+        "400":
+          description: Cannot parse input data or checking out orders
+          schema:
+            type: string
+      security:
+      - ApiKeyAuth: []
+      summary: Buy a list of orders
       tags:
       - Auth
   /auth/orders/{id}:
